# openSourceHire

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
.claude/: plan.md
.github/workflows/: ingest.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  deps.py  main.py
backend/app/agents/: base.py  code_fix.py  issue_understanding.py  portfolio_builder.py  pr_coach.py  scout.py  skill_graph.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_enable_pgvector.py  0002_users_skill_profiles.py  0003_repos_issues.py  0004_voyage_1024_embeddings.py  0005_user_api_token.py  0006_portfolio_testimonials.py  0007_contact_messages.py  0008_fix_sessions.py
backend/app/integrations/: github.py
backend/app/models/: __init__.py  contact.py  fix_session.py  issue.py  portfolio.py  repo.py  skill.py  user.py
backend/app/routers/: admin.py  auth.py  contact.py  feed.py  fix.py  issues.py  portfolio.py  users.py
backend/app/scripts/: ingest.py
backend/app/services/: cache.py  email.py  embeddings.py  eval_log.py  ingestion.py  policy.py
backend/data/: anti_ai_repos.txt  seed_repos.txt
backend/tests/: test_policy.py
cli/: package.json
docs/: architecture.md  maintainer-pledge.md  thesis-outline.md
eval/: README.md  ground_truth.jsonl  metrics.py  run_study.py  store.py
frontend/: package.json  tailwind.config.ts
scripts/: build-study-plan.sh  puppeteer-config.json
(+44 files in other folders)
