[project]
name = "osh-backend"
version = "0.0.1"
description = "OpenSourceHire FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "pgvector>=0.3.6",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "httpx>=0.27.2",
    "anthropic>=0.39.0",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.12",
    "starlette>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
